; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_rmt.c_rmt_set_rx_intr_en.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_rmt.c_rmt_set_rx_intr_en.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RMT_CHANNEL_MAX = common dso_local global i32 0, align 4
@RMT_CHANNEL_ERROR_STR = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rmt_set_rx_intr_en(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @RMT_CHANNEL_MAX, align 4
  %7 = icmp slt i32 %5, %6
  %8 = zext i1 %7 to i32
  %9 = load i32, i32* @RMT_CHANNEL_ERROR_STR, align 4
  %10 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %11 = call i32 @RMT_CHECK(i32 %8, i32 %9, i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = mul nsw i32 %15, 3
  %17 = add nsw i32 %16, 1
  %18 = call i32 @BIT(i32 %17)
  %19 = call i32 @rmt_set_intr_enable_mask(i32 %18)
  br label %26

20:                                               ; preds = %2
  %21 = load i32, i32* %3, align 4
  %22 = mul nsw i32 %21, 3
  %23 = add nsw i32 %22, 1
  %24 = call i32 @BIT(i32 %23)
  %25 = call i32 @rmt_clr_intr_enable_mask(i32 %24)
  br label %26

26:                                               ; preds = %20, %14
  %27 = load i32, i32* @ESP_OK, align 4
  ret i32 %27
}

declare dso_local i32 @RMT_CHECK(i32, i32, i32) #1

declare dso_local i32 @rmt_set_intr_enable_mask(i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @rmt_clr_intr_enable_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
